# OptiRoute-AI

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/: CODEOWNERS  (+1 more)
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1a9299fcd98c_.py  44b979adbab1_fix_last_login_timezone.py  524386f01268_fix_driver_table.py  82d3c81a81ee_create_roads_table.py
backend/app/: main.py
backend/app/auth/: dependencies.py  jwt.py  password.py  router.py  schemas.py  service.py  token_store.py
backend/app/core/: config.py  constants.py  logger.py  security.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: database.py
backend/app/drivers/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/exceptions/: base.py
backend/app/middleware/: request_id.py
backend/app/models/: base_model.py
backend/app/orders/: models.py  repository.py  router.py  schemas.py  service.py  services.py
backend/app/repositories/: base.py
backend/app/roads/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/routes/: optimizer.py  router.py  schemas.py  service.py
backend/app/services/: base.py
backend/app/simulation/: __init__.py  traffic_simulator.py  vehicle_simulator.py
backend/app/tracking/: router.py  schemas.py
backend/app/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/utils/: pegination.py  time.py
backend/tests/: conftest.py
(+134 files in other folders)
